--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -674,5 +674,6 @@
   "dn34:2.2.16": "This is the third abode of beings.",
   "dn34:2.2.17": "There are beings of unified bodies and unified perception, namely: the lustrous angels.",
   "dn34:2.2.18": "This is the fourth abode of beings.",
-  "dn34:2.2.19": "There are beings who have no perception and feel nothing, namely: the no perception angels."
+  "dn34:2.2.19": "There are beings who have no perception and feel nothing, namely: the no perception angels.",
+  "dn34:2.2.20": "This is the fifth abode of beings."
 }
