--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -392,7 +392,7 @@
   "dn34:1.8.21": "This is the fifth abiding of consciousness.",
   "dn34:1.8.22": "There are beings who, transcending the sphere of infinite space altogether, attain to the sphere of infinite consciousness percipient ‘Consciousness is infinite’.",
   "dn34:1.8.23": "This is the sixth abiding of consciousness.",
-  "dn34:1.8.24": "There are beings who, transcending the sphere of infinite consciousness altogether, attain to the sphere of no possessions percipient ‘There is nothing’.",
+  "dn34:1.8.24": "There are beings who, transcending the sphere of infinite consciousness altogether, attain to the sphere of no possessions, percipient ‘There is nothing’.",
   "dn34:1.8.25": "This is the seventh abiding of consciousness.",
   "dn34:1.8.26": "These are the seven things that are to be understood accurately.",
   "dn34:1.8.27": "What are the seven things that are to be abandoned?",
