--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -390,7 +390,7 @@
   "dn34:1.8.19": "This is the fourth abiding of consciousness.",
   "dn34:1.8.20": "There are beings who, with the transcendence of perceptions of form altogether ... attain to the sphere of infinite space, percipient ‘Space is infinite’.",
   "dn34:1.8.21": "This is the fifth abiding of consciousness.",
-  "dn34:1.8.22": "There are beings who, transcending the sphere of infinite space altogether, attain to the sphere of infinite consciousness percipient ‘Consciousness is infinite’.",
+  "dn34:1.8.22": "There are beings who, transcending the sphere of infinite space altogether, attain to the sphere of infinite consciousness, percipient ‘Consciousness is infinite’.",
   "dn34:1.8.23": "This is the sixth abiding of consciousness.",
   "dn34:1.8.24": "There are beings who, transcending the sphere of infinite consciousness altogether, attain to the sphere of no possessions, percipient ‘There is nothing’.",
   "dn34:1.8.25": "This is the seventh abiding of consciousness.",
