--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -679,5 +679,6 @@
   "dn34:2.2.21": "There are beings who, with the transcendence of perceptions of form altogether, and the cessation of perceptions of aversion, not attending to perceptions of diversity, attain to the sphere of infinite space, percipient ‘Space is infinite’.",
   "dn34:2.2.22": "This is the sixth abode of beings.",
   "dn34:2.2.23": "There are beings who, transcending the sphere of infinite space altogether, attain to the sphere of infinite consciousness, percipient ‘Consciousness is infinite’.",
-  "dn34:2.2.24": "This is the seventh abode of beings."
+  "dn34:2.2.24": "This is the seventh abode of beings.",
+  "dn34:2.2.25": "There are beings who, transcending the sphere of infinite consciousness altogether, attain to the sphere of no possessions, percipient ‘There is nothing’."
 }
