--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -683,5 +683,6 @@
   "dn34:2.2.25": "There are beings who, transcending the sphere of infinite consciousness altogether, attain to the sphere of no possessions, percipient ‘There is nothing’.",
   "dn34:2.2.26": "This is the eigth abode of beings.",
   "dn34:2.2.27": "There are beings who, transcending the sphere of no possessions altogether, attain to the sphere of neither perception nor non perception.",
-  "dn34:2.2.28": "This is the ninth abode of beings."
+  "dn34:2.2.28": "This is the ninth abode of beings.",
+  "dn34:2.2.29": "These are the nine things that are to be understood accurately."
 }
