--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -685,5 +685,6 @@
   "dn34:2.2.27": "There are beings who, transcending the sphere of no possessions altogether, attain to the sphere of neither perception nor non perception.",
   "dn34:2.2.28": "This is the ninth abode of beings.",
   "dn34:2.2.29": "These are the nine things that are to be understood accurately.",
-  "dn34:2.2.30": "What are the nine things that are to be abandoned?"
+  "dn34:2.2.30": "What are the nine things that are to be abandoned?",
+  "dn34:2.2.31": "The nine things rooted in craving—"
 }
