--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn1.3:0.1": "Verbundene Lehrreden 1 ",
   "sn1.3:0.2": "1. Ein Schilfrohr ",
   "sn1.3:0.3": "3. Geführt ",
-  "sn1.3:1.1": "In Sāvatthī. "
+  "sn1.3:1.1": "In Sāvatthī. ",
+  "sn1.3:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: "
 }
