--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn1.3:0.2": "1. Ein Schilfrohr ",
   "sn1.3:0.3": "3. Geführt ",
   "sn1.3:1.1": "In Sāvatthī. ",
-  "sn1.3:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: "
+  "sn1.3:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
+  "sn1.3:2.1": "„Dieses Leben, so kurz, eilt voran; "
 }
