--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn1.3:1.1": "In Sāvatthī. ",
   "sn1.3:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
   "sn1.3:2.1": "„Dieses Leben, so kurz, eilt voran; ",
-  "sn1.3:2.2": "für den vom Alter Gejagten gibt es keinen Schutz. "
+  "sn1.3:2.2": "für den vom Alter Gejagten gibt es keinen Schutz. ",
+  "sn1.3:2.3": "Erkennt diese Gefahr im Tod "
 }
