Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn1.3:2.2": "für den vom Alter Gejagten gibt es keinen Schutz. ",
   "sn1.3:2.3": "Erkennt diese Gefahr im Tod ",
   "sn1.3:2.4": "und tut Gutes, das zu Glück führt.“ ",
-  "sn1.3:3.1": "„Dieses Leben, so kurz, eilt voran; "
+  "sn1.3:3.1": "„Dieses Leben, so kurz, eilt voran; ",
+  "sn1.3:3.2": "für den zum Alter Hingeführten gibt es keinen Schutz. "
 }
