Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn1.3:2.4": "und tut Gutes, das zu Glück führt.“ ",
   "sn1.3:3.1": "„Dieses Leben, so kurz, eilt voran; ",
   "sn1.3:3.2": "zum Alter hingeführt, findet man keinen Schutz. ",
-  "sn1.3:3.3": "Wenn er diese Gefahr im Tod erkennt, "
+  "sn1.3:3.3": "Wenn er diese Gefahr im Tod erkennt, ",
+  "sn1.3:3.4": "lässt ein Friedenssucher den Köder der Welt fallen.“ "
 }
