--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -5,6 +5,7 @@
   "sn-name:4.sn1.1": "Die Flut überqueren ",
   "sn-name:5.sn1.2": "Befreiung ",
   "sn-name:6.sn1.3": "Hingeführt ",
+  "sn-name:7.sn1.4": "Die Zeit fliegt ",
   "sn-name:14.sn1-nandanavagga": "Der Garten der Wonne ",
   "sn-name:15.sn1.11": "Der Garten der Wonne ",
   "sn-name:25.sn1-sattivagga": "Ein Schwert ",
