--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn1.4:0.1": "Verbundene Lehrreden 1 ",
   "sn1.4:0.2": "1. Ein Schilfrohr ",
-  "sn1.4:0.3": "4. Die Zeit fliegt "
+  "sn1.4:0.3": "4. Die Zeit fliegt ",
+  "sn1.4:1.1": "In Sāvatthī. "
 }
