--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn1.4:0.1": "Verbundene Lehrreden 1 ",
   "sn1.4:0.2": "1. Ein Schilfrohr ",
   "sn1.4:0.3": "4. Die Zeit fliegt ",
-  "sn1.4:1.1": "In Sāvatthī. "
+  "sn1.4:1.1": "In Sāvatthī. ",
+  "sn1.4:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: "
 }
