--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn1.4:1.1": "In Sāvatthī. ",
   "sn1.4:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
   "sn1.4:2.1": "„Die Zeit fliegt, die Nächte zieh'n vorbei, ",
-  "sn1.4:2.2": "die Lebensstufen bleiben nacheinander zurück. "
+  "sn1.4:2.2": "die Lebensstufen bleiben nacheinander zurück. ",
+  "sn1.4:2.3": "Erkennt diese Gefahr im Tod "
 }
