Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.4_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn1.4:2.4": "und tut Gutes, das zu Glück führt.“ ",
   "sn1.4:3.1": "„Die Zeit fliegt, die Nächte zieh'n vorbei, ",
   "sn1.4:3.2": "die Lebensstufen bleiben nacheinander zurück. ",
-  "sn1.4:3.3": "Wenn er diese Gefahr im Tod erkennt, "
+  "sn1.4:3.3": "Wenn er diese Gefahr im Tod erkennt, ",
+  "sn1.4:3.4": "lässt ein Friedenssucher den Köder der Welt fallen.“ "
 }
