--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -71,7 +71,7 @@
   "mn1:17.2": "સર્વઅભાવના મનોસ્થાનને સર્વઅભાવનુ મનોસ્થાન સમજ઼ી પોતાને સર્વઅભાવનુ મનોસ્થાન માને છે, પોતાને સર્વઅભાવના મનોસ્થાનમાં માને છે, પોતાને સર્વઅભાવના મનોસ્થાનથી માને છે, સર્વઅભાવનુ મનોસ્થાન મારું છે એવું માને છે, સર્વઅભાવના મનોસ્થાનમાં આનંદ લે છે.",
   "mn1:17.3": "એ શેના માટે?",
   "mn1:17.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ નથી, કહું છું.",
-  "mn1:18.1": "સંજ્ઞાન કે અસંજ્ઞાનના અભાવના મનોસ્થાનને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું સ્થાન સમજ઼તો હોય છે;",
+  "mn1:18.1": "સંજ્ઞાન કે અસંજ્ઞાનના અભાવના મનોસ્થાનને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું મનોસ્થાન સમજ઼તો હોય છે;",
   "mn1:18.2": "સંજ્ઞાન કે અસંજ્ઞાનના અભાવના મનોસ્થાનને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું સ્થાન સમજ઼ી પોતાને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું સ્થાન માને છે, પોતાને સંજ્ઞાન કે અસંજ્ઞાનના અભાવના સ્થાનમાં માને છે, પોતાને સંજ્ઞાન કે અસંજ્ઞાનના અભાવના સ્થાનથી માને છે, સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું સ્થાન મારું છે એવું માને છે, સંજ્ઞાન કે અસંજ્ઞાનના અભાવના સ્થાનમાં આનંદ લે છે.",
   "mn1:18.3": "એ શેના માટે?",
   "mn1:18.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ નથી, કહું છું.",
