Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -125,7 +125,7 @@
   "mn1:28-49.11": "અભિભૂ દેવોને અભિભૂ દેવો …",
   "mn1:28-49.12": "અનંત આકાશના મનોસ્થાનને અનંત આકાશનું મનોસ્થાન …",
   "mn1:28-49.13": "અનંત ચેતનાના મનોસ્થાનને અનંત ચેતનાનું મનોસ્થાન …",
-  "mn1:28-49.14": "સર્વઅભાવના મનોસ્થાનને  સર્વઅભાવનુ સ્થાન …",
+  "mn1:28-49.14": "સર્વઅભાવના મનોસ્થાનને  સર્વઅભાવનુ મનોસ્થાન …",
   "mn1:28-49.15": "સંજ્ઞાન કે અસંજ્ઞાનના અભાવના મનોસ્થાનને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું સ્થાન …",
   "mn1:28-49.16": "જોએલાને જોએલું …",
   "mn1:28-49.17": "સાંભળ્યાને સાંભળ્યુ …",
