--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -249,7 +249,7 @@
   "mn1:124-146.11": "અભિભૂ દેવોને અભિભૂ દેવો …",
   "mn1:124-146.12": "અનંત આકાશના મનોસ્થાનને અનંત આકાશનું મનોસ્થાન …",
   "mn1:124-146.13": "અનંત ચેતનાના મનોસ્થાનને અનંત ચેતનાનું મનોસ્થાન …",
-  "mn1:124-146.14": "સર્વઅભાવના મનોસ્થાનને  સર્વઅભાવનુ સ્થાન …",
+  "mn1:124-146.14": "સર્વઅભાવના મનોસ્થાનને  સર્વઅભાવનુ મનોસ્થાન …",
   "mn1:124-146.15": "સંજ્ઞાન કે અસંજ્ઞાનના અભાવના મનોસ્થાનને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું મનોસ્થાન …",
   "mn1:124-146.16": "જોએલાને જોએલું …",
   "mn1:124-146.17": "સાંભળ્યાને સાંભળ્યુ …",
