Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -76,5 +76,6 @@
   "mn1:18.2": "संज्ञान और असंज्ञानके अभावके मनोस्थानको संज्ञान और असंज्ञानके अभावका मनोस्थान समझकर खु़दको संज्ञान और असंज्ञानके अभावका मनोस्थान मानता है, खु़दको संज्ञान और असंज्ञानके अभावके मनोस्थानमे मानता है, खु़दको संज्ञान और असंज्ञानके अभावके मनोस्थानसे अलग मानता है, संज्ञान और असंज्ञानके अभावका मनोस्थान मेरा है ऍसा मानता है, संज्ञान और असंज्ञानके अभावके मनोस्थानमे आनंद लेता है।",
   "mn1:18.3": "एैसा किस लिये?",
   "mn1:18.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:19.1": "द्रुष्टको द्रुष्ट समझता है;"
+  "mn1:19.1": "द्रुष्टको द्रुष्ट समझता है;",
+  "mn1:19.2": "द्रुष्टको द्रुष्ट समझकर खु़दको द्रुष्ट मानता है, खु़दको द्रुष्टमे मानता है, खु़दको द्रुष्टसे अलग मानता है, द्रुष्ट मेरा है ऍसा मानता है, द्रुष्टमे आनंद लेता है।"
 }
