Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -79,5 +79,6 @@
   "mn1:19.1": "द्रुष्टको द्रुष्ट समझता है;",
   "mn1:19.2": "द्रुष्टको द्रुष्ट समझकर खु़दको द्रुष्ट मानता है, खु़दको द्रुष्टमे मानता है, खु़दको द्रुष्टसे अलग मानता है, द्रुष्ट मेरा है ऍसा मानता है, द्रुष्टमे आनंद लेता है।",
   "mn1:19.3": "एैसा किस लिये?",
-  "mn1:19.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:19.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:20.1": "श्रुतको श्रुत समझता है;"
 }
