--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -80,5 +80,6 @@
   "mn1:19.2": "द्रुष्टको द्रुष्ट समझकर खु़दको द्रुष्ट मानता है, खु़दको द्रुष्टमे मानता है, खु़दको द्रुष्टसे अलग मानता है, द्रुष्ट मेरा है ऍसा मानता है, द्रुष्टमे आनंद लेता है।",
   "mn1:19.3": "एैसा किस लिये?",
   "mn1:19.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:20.1": "श्रुतको श्रुत समझता है;"
+  "mn1:20.1": "श्रुतको श्रुत समझता है;",
+  "mn1:20.2": "श्रुतको श्रुत समझकर खु़दको श्रुत मानता है, खु़दको श्रुतमे मानता है, खु़दको श्रुतसे अलग मानता है, श्रुत मेरा है ऍसा मानता है, श्रुतमे आनंद लेता है।"
 }
