Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -81,5 +81,6 @@
   "mn1:19.3": "एैसा किस लिये?",
   "mn1:19.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:20.1": "श्रुतको श्रुत समझता है;",
-  "mn1:20.2": "श्रुतको श्रुत समझकर खु़दको श्रुत मानता है, खु़दको श्रुतमे मानता है, खु़दको श्रुतसे अलग मानता है, श्रुत मेरा है ऍसा मानता है, श्रुतमे आनंद लेता है।"
+  "mn1:20.2": "श्रुतको श्रुत समझकर खु़दको श्रुत मानता है, खु़दको श्रुतमे मानता है, खु़दको श्रुतसे अलग मानता है, श्रुत मेरा है ऍसा मानता है, श्रुतमे आनंद लेता है।",
+  "mn1:20.3": "एैसा किस लिये?"
 }
