Translations by Piyadassii to translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
@@ -1,4 +1,5 @@
 {
   "an10.60:0.1": "Palaipsninių suttų rinkinys 10",
-  "an10.60:0.2": "6. Skyrius apie savo protą"
+  "an10.60:0.2": "6. Skyrius apie savo protą",
+  "an10.60:0.3": "60. Girimānanda"
 }
