--- a/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
@@ -1,5 +1,6 @@
 {
   "an10.60:0.1": "Palaipsninių suttų rinkinys 10",
   "an10.60:0.2": "6. Skyrius apie savo protą",
-  "an10.60:0.3": "60. Girimānanda"
+  "an10.60:0.3": "60. Girimānanda",
+  "an10.60:1.1": "Kartą Palaimintasis buvo apsistojęs Anathapindikos vienuolyne Džetos girioje netoli Savatthi."
 }
