Translations by Piyadassii to translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
@@ -9,5 +9,6 @@
   "an10.60:2.2": "Gerai būtų, Garbusis, jei Palaimintasis iš atjautos nueitų pas garbingąjį Girimanandą.”",
   "an10.60:2.3": "„Ananda, jei tu pats vienuoliui Girimanandai papasakosi apie dešimt suvokimų, visai įmanoma, kad vienuoliui Girimanandai išgirdus tuos dešimt suvokimų, ta liga kaipmat praeis. ",
   "an10.60:3.1": "Kokius dešimt?",
-  "an10.60:3.2": "Nepastovumo suvokimas, nesavasties suvokimas, atgrasumo suvokimas, baisumo suvokimas, atsikratimo suvokimas, išblėsimo suvokimas, baigties suvokimas, nesimėgavimo nieko pasaulyje suvokimą, jokių sudarytų dalykų nenorėjimo suvokimas, atida kvėpavimui."
+  "an10.60:3.2": "Nepastovumo suvokimas, nesavasties suvokimas, atgrasumo suvokimas, baisumo suvokimas, atsikratimo suvokimas, išblėsimo suvokimas, baigties suvokimas, nesimėgavimo nieko pasaulyje suvokimą, jokių sudarytų dalykų nenorėjimo suvokimas, atida kvėpavimui.",
+  "an10.60:4.1": "Ir koks, Ananda, yra nepastovumo suvokimas?"
 }
