Translations by Piyadassii to translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
@@ -11,5 +11,6 @@
   "an10.60:3.1": "Kokius dešimt?",
   "an10.60:3.2": "Nepastovumo suvokimas, nesavasties suvokimas, atgrasumo suvokimas, baisumo suvokimas, atsikratimo suvokimas, išblėsimo suvokimas, baigties suvokimas, nesimėgavimo nieko pasaulyje suvokimą, jokių sudarytų dalykų nenorėjimo suvokimas, atida kvėpavimui.",
   "an10.60:4.1": "Ir koks, Ananda, yra nepastovumo suvokimas?",
-  "an10.60:4.2": "Štai, Ananda, vienuolis nuėjęs ar į mišką, ar po medžiu, ar į atokią vietą svarsto taip:"
+  "an10.60:4.2": "Štai, Ananda, vienuolis nuėjęs ar į mišką, ar po medžiu, ar į atokią vietą svarsto taip:",
+  "an10.60:4.3": "„Materija nepastovi, jausmo tonas nepastovus, suvokimas nepastovus, proto dariniai nepastovūs, sąmonė nepastovi.”"
 }
