Translations by Piyadassii to translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an10/an10.60_translation-lt-piyadassi.json
@@ -14,5 +14,6 @@
   "an10.60:4.2": "Štai, Ananda, vienuolis nuėjęs ar į mišką, ar po medžiu, ar į atokią vietą svarsto taip:",
   "an10.60:4.3": "„Materija nepastovi, jausmo tonas nepastovus, suvokimas nepastovus, proto dariniai nepastovūs, sąmonė nepastovi.”",
   "an10.60:4.4": "Taip jis gyvena kontempliuodamas nepastovumą šiuose penkiuose savinamuose sanduose.",
-  "an10.60:4.5": "Tai, Ananda, vadinama nepastovumo suvokimu."
+  "an10.60:4.5": "Tai, Ananda, vadinama nepastovumo suvokimu.",
+  "an10.60:5.1": "Ir koks, Ananda, yra nesavasties suvokimas?"
 }
