--- a/translation/it/giovannizappa/sutta/mn/mn10_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn10_translation-it-giovannizappa.json
@@ -91,8 +91,8 @@
   "mn10:34.2": "È quando un mendicante comprende la mente con avidità come ‘mente con avidità,’",
   "mn10:34.3": "e la mente senza avidità come ‘mente senza avidità.’",
   "mn10:34.4": "Comprende la mente con odio come ‘mente con odio,’",
-  "mn10:34.5": "e mente senza odio come ‘mente senza odio.’",
-  "mn10:34.6": "Comprende mente con illusione come ‘mente con illusione,’",
+  "mn10:34.5": "e la mente senza odio come ‘mente senza odio.’",
+  "mn10:34.6": "Comprende la mente con illusione come ‘mente con illusione,’",
   "mn10:34.7": "e mente senza illusione come ‘mente senza illusione.’",
   "mn10:34.8": "Comprende mente ristretta come ‘mente ristretta,’",
   "mn10:34.9": "e mente sparpagliata come ‘mente sparpagliata.’",
