--- a/translation/it/giovannizappa/sutta/mn/mn10_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn10_translation-it-giovannizappa.json
@@ -95,7 +95,7 @@
   "mn10:34.6": "Comprende la mente con illusione come ‘mente con illusione,’",
   "mn10:34.7": "e la mente senza illusione come ‘mente senza illusione.’",
   "mn10:34.8": "Comprende la mente ristretta come ‘mente ristretta,’",
-  "mn10:34.9": "e mente sparpagliata come ‘mente sparpagliata.’",
+  "mn10:34.9": "e la mente sparpagliata come ‘mente sparpagliata.’",
   "mn10:34.10": "Comprende mente espansiva come ‘mente espansiva,’",
   "mn10:34.11": "e mente non espansiva come ‘mente non espansiva.’",
   "mn10:34.12": "Comprende mente non suprema come ‘mente non suprema,’",
