--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -83,5 +83,6 @@
   "mn1:20.1": "श्रुतको श्रुत समझता है;",
   "mn1:20.2": "श्रुतको श्रुत समझकर खु़दको श्रुत मानता है, खु़दको श्रुतमे मानता है, खु़दको श्रुतसे अलग मानता है, श्रुत मेरा है ऍसा मानता है, श्रुतमे आनंद लेता है।",
   "mn1:20.3": "एैसा किस लिये?",
-  "mn1:20.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:20.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:21.1": "संवेदितको संवेदित समझता है;"
 }
