Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -84,7 +84,7 @@
   "mn1:20.3": "એ શેના માટે?",
   "mn1:20.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ નથી, કહું છું.",
   "mn1:21.1": "સંવેદિતને સંવેદિત સમજ઼તો હોય છે;",
-  "mn1:21.2": "ખ્યાલ કરેલાને  ખ્યાલ કરેલું સમજ઼ી પોતાને ખ્યાલ માને છે, પોતાને ખ્યાલમાં માને છે, પોતાને ખ્યાલથી માને છે, ખ્યાલો મારા છે એવું માને છે, ખ્યાલોમાં આનંદ લે છે.",
+  "mn1:21.2": "સંવેદિતને સંવેદિત સમજ઼ી પોતાને સંવેદિત માને છે, પોતાને સંવેદિતમાં માને છે, પોતાને સંવેદિતથી માને છે, સંવેદન મારા છે એવું માને છે, સંવેદિતમાં આનંદ લે છે.",
   "mn1:21.3": "એ શેના માટે?",
   "mn1:21.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ નથી, કહું છું.",
   "mn1:22.1": "જાણેલાને જાણેલુ સમજ઼તો હોય છે;",
