--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -87,5 +87,6 @@
   "mn1:21.1": "संवेदितको संवेदित समझता है;",
   "mn1:21.2": "संवेदितको संवेदित समझकर खु़दको संवेदित मानता है, खु़दको संवेदितमे मानता है, खु़दको संवेदितसे अलग मानता है, संवेदित मै हुं ऍसा मानता है, संवेदितमे आनंद लेता है।",
   "mn1:21.3": "एैसा किस लिये?",
-  "mn1:21.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:21.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:22.1": "जाने हुएको जाना हुआ समझता है;"
 }
