--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -88,5 +88,6 @@
   "mn1:21.2": "संवेदितको संवेदित समझकर खु़दको संवेदित मानता है, खु़दको संवेदितमे मानता है, खु़दको संवेदितसे अलग मानता है, संवेदित मै हुं ऍसा मानता है, संवेदितमे आनंद लेता है।",
   "mn1:21.3": "एैसा किस लिये?",
   "mn1:21.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:22.1": "जाने हुएको जाना हुआ समझता है;"
+  "mn1:22.1": "जाने हुएको जाना हुआ समझता है;",
+  "mn1:22.2": "जाने हुएको जाना हुआ समझकर खु़दको जाना हुआ मानता है, खु़दको जाने हुएमे मानता है, खु़दको जाने हुएसे अलग मानता है, जाना हुआ मेरा है ऍसा मानता है, जाने हुएमे आनंद लेता है।"
 }
