--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -94,5 +94,6 @@
   "mn1:22.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:23.1": "एकताको एकता समझता है;",
   "mn1:23.2": "एकताको एकता समझकर खु़दको एकता मानता है, खु़दको एकतामे मानता है, खु़दको एकतासे अलग मानता है, एकता मेरी है ऍसा मानता है, एकतामे आनंद लेता है।",
-  "mn1:23.3": "एैसा किस लिये?"
+  "mn1:23.3": "एैसा किस लिये?",
+  "mn1:23.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
 }
