--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -97,5 +97,6 @@
   "mn1:23.3": "एैसा किस लिये?",
   "mn1:23.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:24.1": "विविधताको विविधता समझता है;",
-  "mn1:24.2": "विविधताको विविधता समझकर खु़दको विविधता मानता है, खु़दको विविधतामे मानता है, खु़दको विविधतासे अलग मानता है, विविधता मेरी है ऍसा मानता है, विविधतामे आनंद लेता है।"
+  "mn1:24.2": "विविधताको विविधता समझकर खु़दको विविधता मानता है, खु़दको विविधतामे मानता है, खु़दको विविधतासे अलग मानता है, विविधता मेरी है ऍसा मानता है, विविधतामे आनंद लेता है।",
+  "mn1:24.3": "एैसा किस लिये?"
 }
