--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -100,5 +100,6 @@
   "mn1:24.2": "विविधताको विविधता समझकर खु़दको विविधता मानता है, खु़दको विविधतामे मानता है, खु़दको विविधतासे अलग मानता है, विविधता मेरी है ऍसा मानता है, विविधतामे आनंद लेता है।",
   "mn1:24.3": "एैसा किस लिये?",
   "mn1:24.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:25.1": "सर्वको सर्व समझता है;"
+  "mn1:25.1": "सर्वको सर्व समझता है;",
+  "mn1:25.2": "सर्वको सर्व समझकर खु़दको सर्व मानता है, खु़दको सर्वमे मानता है, खु़दको सर्वसे अलग मानता है, सर्व मेरा है ऍसा मानता है, सर्वमे आनंद लेता है।"
 }
