--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -102,5 +102,6 @@
   "mn1:24.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:25.1": "सर्वको सर्व समझता है;",
   "mn1:25.2": "सर्वको सर्व समझकर खु़दको सर्व मानता है, खु़दको सर्वमे मानता है, खु़दको सर्वसे अलग मानता है, सर्व मेरा है ऍसा मानता है, सर्वमे आनंद लेता है।",
-  "mn1:25.3": "एैसा किस लिये?"
+  "mn1:25.3": "एैसा किस लिये?",
+  "mn1:25.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
 }
