--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -104,5 +104,6 @@
   "mn1:25.2": "सर्वको सर्व समझकर खु़दको सर्व मानता है, खु़दको सर्वमे मानता है, खु़दको सर्वसे अलग मानता है, सर्व मेरा है ऍसा मानता है, सर्वमे आनंद लेता है।",
   "mn1:25.3": "एैसा किस लिये?",
   "mn1:25.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:26.1": "निर्वाणको निर्वाण समझता है;"
+  "mn1:26.1": "निर्वाणको निर्वाण समझता है;",
+  "mn1:26.2": "निर्वाणको निर्वाण समझकर खु़दको निर्वाण मानता है, खु़दको निर्वाणमे मानता है, खु़दको निर्वाणसे अलग मानता है, निर्वाण मेरा है ऍसा मानता है, निर्वाणमे आनंद लेता है।"
 }
