--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -106,5 +106,6 @@
   "mn1:25.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:26.1": "निर्वाणको निर्वाण समझता है;",
   "mn1:26.2": "निर्वाणको निर्वाण समझकर खु़दको निर्वाण मानता है, खु़दको निर्वाणमे मानता है, खु़दको निर्वाणसे अलग मानता है, निर्वाण मेरा है ऍसा मानता है, निर्वाणमे आनंद लेता है।",
-  "mn1:26.3": "एैसा किस लिये?"
+  "mn1:26.3": "एैसा किस लिये?",
+  "mn1:26.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
 }
