--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -690,5 +690,6 @@
   "dn34:2.2.32": "Because of craving, there is searching. Because of searching, there is gain. Because of gain, there is speculation. Because of speculation, there is passionate desire. Because of passionate desire, there is acquisitiveness. Because of acquisitiveness, there is possessiveness. Because of possessiveness, there is stinginess. Because of stinginess, there is mercenariness. Because of mercenariness, manifold vile, unwholesome things manifest: the taking up of clubs and weapons; quarreling, disputing, contention, and strife; and backbiting and lying.",
   "dn34:2.2.33": "These are the nine things that are to be abandoned.",
   "dn34:2.2.34": "What are the nine things that lead to backsliding?",
-  "dn34:2.2.35": "The nine bases of resentment:"
+  "dn34:2.2.35": "The nine bases of resentment:",
+  "dn34:2.2.36": "One is bound in resentment thinking ‘They pursued my disadvantage.’"
 }
