Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -692,5 +692,6 @@
   "dn34:2.2.34": "What are the nine things that lead to backsliding?",
   "dn34:2.2.35": "The nine bases of resentment:",
   "dn34:2.2.36": "One is bound in resentment thinking ‘They pursued my disadvantage.’",
-  "dn34:2.2.37": "One is bound in resentment thinking ‘They are pursuing my disadvantage.’"
+  "dn34:2.2.37": "One is bound in resentment thinking ‘They are pursuing my disadvantage.’",
+  "dn34:2.2.38": "One is bound in resentment thinking ‘They will pursue my disadvantage.’"
 }
