--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -693,5 +693,6 @@
   "dn34:2.2.35": "The nine bases of resentment:",
   "dn34:2.2.36": "One is bound in resentment thinking ‘They pursued my disadvantage.’",
   "dn34:2.2.37": "One is bound in resentment thinking ‘They are pursuing my disadvantage.’",
-  "dn34:2.2.38": "One is bound in resentment thinking ‘They will pursue my disadvantage.’"
+  "dn34:2.2.38": "One is bound in resentment thinking ‘They will pursue my disadvantage.’",
+  "dn34:2.2.39": "One is bound in resentment thinking ‘They pursued my friend's disadvantage, my dear one's disadvantage.’"
 }
