Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -695,5 +695,6 @@
   "dn34:2.2.37": "One is bound in resentment thinking ‘They are pursuing my disadvantage.’",
   "dn34:2.2.38": "One is bound in resentment thinking ‘They will pursue my disadvantage.’",
   "dn34:2.2.39": "One is bound in resentment thinking ‘They pursued my friend's disadvantage, my dear one's disadvantage.’",
-  "dn34:2.2.40": "One is bound in resentment thinking ‘They are pursuing my friend's disadvantage, my dear one's disadvantage.’"
+  "dn34:2.2.40": "One is bound in resentment thinking ‘They are pursuing my friend's disadvantage, my dear one's disadvantage.’",
+  "dn34:2.2.41": "One is bound in resentment thinking ‘They will pursue my friend's disadvantage, my dear one's disadvantage.’"
 }
