Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -698,5 +698,6 @@
   "dn34:2.2.40": "One is bound in resentment thinking ‘They are pursuing my friend's disadvantage, my dear one's disadvantage.’",
   "dn34:2.2.41": "One is bound in resentment thinking ‘They will pursue my friend's disadvantage, my dear one's disadvantage.’",
   "dn34:2.2.42": "One is bound in resentment thinking ‘They pursued my enemy's advantage, my opponent's advantage.’",
-  "dn34:2.2.43": "One is bound in resentment thinking ‘They are pursuing my enemy's advantage, my opponent's advantage.’"
+  "dn34:2.2.43": "One is bound in resentment thinking ‘They are pursuing my enemy's advantage, my opponent's advantage.’",
+  "dn34:2.2.44": "One is bound in resentment thinking ‘They will pursue my enemy's advantage, my opponent's advantage.’"
 }
