Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -702,5 +702,6 @@
   "dn34:2.2.44": "One is bound in resentment thinking ‘They will pursue my enemy's advantage, my opponent's advantage.’",
   "dn34:2.2.45": "These are the nine things that lead to backsliding.",
   "dn34:2.2.46": "What are the nine things that lead to accomplishment?",
-  "dn34:2.2.47": "The nine ways of resolving resentment:"
+  "dn34:2.2.47": "The nine ways of resolving resentment:",
+  "dn34:2.2.48": "One resolves resentment thinking ‘They pursued my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) "
 }
