--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -703,5 +703,6 @@
   "dn34:2.2.45": "These are the nine things that lead to backsliding.",
   "dn34:2.2.46": "What are the nine things that lead to accomplishment?",
   "dn34:2.2.47": "The nine ways of resolving resentment:",
-  "dn34:2.2.48": "One resolves resentment thinking ‘They pursued my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) "
+  "dn34:2.2.48": "One resolves resentment thinking ‘They pursued my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) ",
+  "dn34:2.2.49": "One resolves resentment thinking ‘They are pursuing my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) "
 }
