--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -706,5 +706,6 @@
   "dn34:2.2.48": "One resolves resentment thinking ‘They pursued my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) ",
   "dn34:2.2.49": "One resolves resentment thinking ‘They are pursuing my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) ",
   "dn34:2.2.50": "One resolves resentment thinking ‘They will pursue my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) ",
-  "dn34:2.2.51": "One resolves resentment thinking ‘They pursued my friend's disadvantage, my dear one's disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)"
+  "dn34:2.2.51": "One resolves resentment thinking ‘They pursued my friend's disadvantage, my dear one's disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)",
+  "dn34:2.2.52": "One resolves resentment thinking ‘They are pursuing my friend's disadvantage, my dear one's disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)"
 }
