--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -708,5 +708,6 @@
   "dn34:2.2.50": "One resolves resentment thinking ‘They will pursue my disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX) ",
   "dn34:2.2.51": "One resolves resentment thinking ‘They pursued my friend's disadvantage, my dear one's disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)",
   "dn34:2.2.52": "One resolves resentment thinking ‘They are pursuing my friend's disadvantage, my dear one's disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)",
-  "dn34:2.2.53": "One resolves resentment thinking ‘They will pursue my friend's disadvantage, my dear one's disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)"
+  "dn34:2.2.53": "One resolves resentment thinking ‘They will pursue my friend's disadvantage, my dear one's disadvantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)",
+  "dn34:2.2.54": "One is resolves resentment thinking ‘They pursued my enemy's advantage, my opponent's advantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)"
 }
