--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -713,5 +713,6 @@
   "dn34:2.2.55": "One is resolves resentment thinking ‘They are pursuing my enemy's advantage, my opponent's advantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)",
   "dn34:2.2.56": "One is resolves resentment thinking ‘They will pursue my enemy's advantage, my opponent's advantage. But how is resentment beneficial here?’ (XXXOR \"But what is gained here for him?\"XXX)",
   "dn34:2.2.57": "These are the nine things that lead to accomplishment.",
-  "dn34:2.2.58": "What are the nine things that are hard to penetrate?"
+  "dn34:2.2.58": "What are the nine things that are hard to penetrate?",
+  "dn34:2.2.59": "The nine diversities—"
 }
