--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -717,5 +717,6 @@
   "dn34:2.2.59": "The nine variousnesses—",
   "dn34:2.2.60": "Based on the variety of elements, the variety of contacts arise. Based on the variety of contacts, the variety of feelings arise. Based on the variety of feelings, the variety of perceptions arise. Based on the variety of perceptions, the variety of thoughts arise. Based on the variety of thoughts, the variety of desires arise. Based on the variety of desires, the variety of passions arise. Based on the variety of passions, the variety of search arise. Based on the variety of search, the variety of acquisition arise.",
   "dn34:2.2.61": "These are the nine things that are hard to penetrate.",
-  "dn34:2.2.62": "What are the nine things that are to be encouraged?"
+  "dn34:2.2.62": "What are the nine things that are to be encouraged?",
+  "dn34:2.2.63": "The nine perceptions—"
 }
