Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -719,5 +719,6 @@
   "dn34:2.2.61": "These are the nine things that are hard to penetrate.",
   "dn34:2.2.62": "What are the nine things that are to be encouraged?",
   "dn34:2.2.63": "The nine perceptions—",
-  "dn34:2.2.64": "The perception of the unbeautiful; the perception of death; the perception of disinclination toward food; the perception of boredom toward the whole world; the perception of impermanence; the perception of suffering regarding that which is impermanent; the perception of not-self regarding that which is suffering;  \nthe perception of abandoning; the perception of dispassion."
+  "dn34:2.2.64": "The perception of the unbeautiful; the perception of death; the perception of disinclination toward food; the perception of boredom toward the whole world; the perception of impermanence; the perception of suffering regarding that which is impermanent; the perception of not-self regarding that which is suffering;  \nthe perception of abandoning; the perception of dispassion.",
+  "dn34:2.2.65": "These are the nine things that are to be encouraged."
 }
