Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -247,7 +247,7 @@
   "dn34:1.6.77": "The five strategies for freedom—",
   "dn34:1.6.78": "Here, a teacher or a certain of one's fellows in the holy life in the place of a teacher teaches the Dhamma to a monk.",
   "dn34:1.6.79": "In whatever ways a teacher or a certain of one's fellows in the holy life in the place of a teacher teach the Dhamma to that monk, in just those ways he appreciates the significance and he appreciates the methodology in that Dhamma. ",
-  "dn34:1.6.80": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences pleasure. The mind of one experiencing pleasure becomes collected.",
+  "dn34:1.6.80": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences ease. The mind of one experiencing ease becomes collected.",
   "dn34:1.6.81": "This is the first strategy for freedom.",
   "dn34:1.6.82": "Or alternatively, a teacher or a certain of one's fellows in the holy life in the place of a teacher do not teach the Dhamma to a monk, but rather, he teaches the Dhamma that he has heard and studied, with explanation, to others.",
   "dn34:1.6.83": "In whatever ways he teaches the Dhamma that he has heard and studied, with explanation, to others, in just those ways he appreciates the significance and he appreciates the methodology in that Dhamma. ",
