Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -251,7 +251,7 @@
   "dn34:1.6.81": "This is the first strategy for freedom.",
   "dn34:1.6.82": "Or alternatively, a teacher or a certain of one's fellows in the holy life in the place of a teacher do not teach the Dhamma to a monk, but rather, he teaches the Dhamma that he has heard and studied, with explanation, to others.",
   "dn34:1.6.83": "In whatever ways he teaches the Dhamma that he has heard and studied, with explanation, to others, in just those ways he appreciates the significance and he appreciates the methodology in that Dhamma. ",
-  "dn34:1.6.84": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences pleasure. The mind of one experiencing pleasure becomes collected.",
+  "dn34:1.6.84": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences ease. The mind of one experiencing ease becomes collected.",
   "dn34:1.6.85": "This is the second strategy for freedom.",
   "dn34:1.6.86": "Or alternatively, a teacher or a certain of one's fellows in the holy life in the place of a teacher do not teach the Dhamma to a monk. Nor does he teach the Dhamma that he has heard and studied, with explanation, to others. Rather, he repeatedly rehearses the Dhamma he has heard and studied with explanation.",
   "dn34:1.6.87": "In whatever ways he repeatedly rehearses the Dhamma he has heard and studied with explanation, in just those ways he appreciates the significance and he appreciates the methodology in that Dhamma. ",
