Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -722,5 +722,6 @@
   "dn34:2.2.64": "The perception of the unbeautiful; the perception of death; the perception of disinclination toward food; the perception of boredom toward the whole world; the perception of impermanence; the perception of suffering regarding that which is impermanent; the perception of not-self regarding that which is suffering;  \nthe perception of abandoning; the perception of dispassion.",
   "dn34:2.2.65": "These are the nine things that are to be encouraged.",
   "dn34:2.2.66": "What are the nine things that are to be understood fully?",
-  "dn34:2.2.67": "The nine successive dwellings—"
+  "dn34:2.2.67": "The nine successive dwellings—",
+  "dn34:2.2.68": "Here, a monk, having disentangled himself from sensual pleasures and from unwholesome mental states, having attained joy and ease born of disentanglement and connected with XXXX, dwells in the first meditative immersion."
 }
