Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.6_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn1.6:0.3": "6. Wach ",
   "sn1.6:1.1": "In Sāvatthī. ",
   "sn1.6:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
-  "sn1.6:2.1": "„Wie viele schlafen, während andere wach sind? "
+  "sn1.6:2.1": "„Wie viele schlafen, während andere wach sind? ",
+  "sn1.6:2.2": "Wie viele sind unter den Schlafenden wach? "
 }
