Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn1.9:1.1": "In Sāvatthī. ",
   "sn1.9:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
   "sn1.9:2.1": "„Wer die Einbildung liebt, kann nicht gezähmt werden, ",
-  "sn1.9:2.2": "und wem die Ruhe fehlt, kann kein Weiser sein. "
+  "sn1.9:2.2": "und wem die Ruhe fehlt, kann kein Weiser sein. ",
+  "sn1.9:2.3": "Wer allein in der Wildnis nachlässig lebt, "
 }
