Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn1.9:2.4": "kann über das Hoheitsgebiet des Todes nicht hinausgelangen.“ ",
   "sn1.9:3.1": "„Wer die Einbildung aufgegeben hat, innerlich gelassen, ",
   "sn1.9:3.2": "gesunden Herzens, in jeder Hinsicht frei, ",
-  "sn1.9:3.3": "wer allein in der Wildnis beflissen lebt, "
+  "sn1.9:3.3": "wer allein in der Wildnis beflissen lebt, ",
+  "sn1.9:3.4": "er wird das Hoheitsgebiet des Todes nicht hinausgelangen.“ "
 }
