Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -11,6 +11,7 @@
   "sn-name:10.sn1.7": "Nicht begriffen ",
   "sn-name:11.sn1.8": "Sehr verwirrt ",
   "sn-name:12.sn1.9": "Die Einbildung lieben ",
+  "sn-name:13.sn1.10": "Wildnis ",
   "sn-name:14.sn1-nandanavagga": "Der Garten der Wonne ",
   "sn-name:15.sn1.11": "Der Garten der Wonne ",
   "sn-name:25.sn1-sattivagga": "Ein Schwert ",
