Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
@@ -11,5 +11,5 @@
   "sn1.10:3.1": "„Sie trauern der Vergangenheit nicht nach, ",
   "sn1.10:3.2": "noch sehnen sie die Zukunft herbei; ",
   "sn1.10:3.3": "vom Gegenwärtigen leben sie, ",
-  "sn1.10:3.4": "darum ist ihre Hautfarbe so rein. "
+  "sn1.10:3.4": "darum ist ihre Hautfarbe so klar. "
 }
