Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "an7.67:14.4": "Ein edler Schüler mit Vertrauen als Säule gibt das Untaugliche auf und entwickelt das Taugliche, ",
   "an7.67:14.5": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:14.6": "und ist innerlich rein. ",
-  "an7.67:14.7": "Das ist die erste gute Eigenschaft, die sie besitzt. ",
+  "an7.67:14.7": "Das ist die erste gute Eigenschaft, die er besitzt. ",
   "an7.67:15.1": "So wie eine Festung einen Graben hat, der tief und breit ist, ",
   "an7.67:15.2": "ebenso hat eine edle Schülerin ein Gewissen. Sie hat Gewissensbisse bei Fehlverhalten mit dem Körper, der Sprache und dem Geist und beim Erwerb schlechter, untauglicher Eigenschaften. ",
   "an7.67:15.3": "Eine edle Schülerin mit einem Gewissen als Graben gibt das Untaugliche auf und entwickelt das Taugliche, ",
