Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -57,7 +57,7 @@
   "an7.67:17.3": "Ein edler Schüler mit Gelehrsamkeit als Waffe gibt das Untaugliche auf und entwickelt das Taugliche, ",
   "an7.67:17.4": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:17.5": "und ist innerlich rein. ",
-  "an7.67:17.6": "Das ist die vierte gute Eigenschaft, die sie besitzt. ",
+  "an7.67:17.6": "Das ist die vierte gute Eigenschaft, die er besitzt. ",
   "an7.67:18.1": "So wie in einer Festung viele Arten von Streitkräften leben … ",
   "an7.67:18.3": "ebenso ist eine edle Schülerin energisch. Sie lebt so, dass sie ihre Energie aufrüttelt, um untaugliche Eigenschaften aufzugeben und sich taugliche Eigenschaften zu eigen zu machen. Sie ist stark, standhaft strebsam, und lässt nicht nach beim Entwickeln tauglicher Eigenschaften. ",
   "an7.67:18.4": "Eine edle Schülerin mit Energie als ihren Streitkräften gibt das Untaugliche auf und entwickelt das Taugliche, ",
