Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -76,7 +76,7 @@
   "dn29:9.1": "Dann erscheint da ein Lehrer in der Welt, vollendet, ein vollkommen erwachter Buddha. Die Lehre ist gut erklärt und vorgelegt, sie macht unabhängig, führt zum Frieden, ist von einem vollkommen erwachten Buddha verkündet. ",
   "dn29:9.2": "Die Schüler haben sich nach der Bedeutung dieser guten Lehre erkundigt. Und die geistliche Übung, die in sich geschlossen und rein ist, wurde ihnen enthüllt und offengelegt, mit all ihren gesammelten Sprüchen, mit ihrer beweisbaren Grundlage, gut verkündet, wo immer es Götter und Menschen gibt. ",
   "dn29:9.3": "Und dann stirbt ihr Lehrer. ",
-  "dn29:9.4": "Nach dem Tod eines solchen Lehrers sind die Schülerinnen frei von Gewissensnot. ",
+  "dn29:9.4": "Nach dem Tod eines solchen Lehrers sind die Schüler frei von Gewissensnot. ",
   "dn29:9.5": "Und warum? ",
   "dn29:9.6": "Weil sie denken: ‚Unser Lehrer war vollendet, ein vollkommen erwachter Buddha. ",
   "dn29:9.7": "Seine Lehre war gut erklärt, ",
