Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -63,7 +63,7 @@
   "an3.70:6.3": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
   "an3.70:6.4": "Während er sich auf den Klargewordenen besinnt, wird sein Geist klar, Freude kommt auf und die Verunreinigungen des Geistes lösen sich auf. ",
   "an3.70:6.5": "Das nennt man ",
-  "an3.70:6.6": "eine edle Schülerin, die den Besinnungstag Brahmās einhält, die mit Brahmā lebt, die an Brahmā denkt, deren Geist dadurch klar wird, bei der Freude aufkommt und die Verunreinigungen des Geistes sich auflösen. ",
+  "an3.70:6.6": "einen edlen Schüler, der den Besinnungstag Brahmās einhält, der mit Brahmā lebt, der an Brahmā denkt, dessen Geist dadurch klar wird, bei dem Freude aufkommt und die Verunreinigungen des Geistes sich auflösen. ",
   "an3.70:6.7": "So läutert man einen verunreinigten Geist, indem man Mühe aufwendet. ",
   "an3.70:7.1": "Ein verunreinigter Geist wird geläutert, indem man Mühe aufwendet. ",
   "an3.70:7.2": "Und wie läutert man einen verunreinigten Geist, indem man Mühe aufwendet? ",
