Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -117,7 +117,7 @@
   "an3.70:16.7": " ",
   "an3.70:16.8": " ",
   "an3.70:16.9": " ",
-  "an3.70:16.10": "Während sie sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, wird ihr Geist klar, Freude kommt auf und die Verunreinigungen des Geistes lösen sich auf. Es ist, wie wenn man verunreinigtes Gold läutert, indem man Mühe aufwendet. ",
+  "an3.70:16.10": "Während er sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, wird sein Geist klar, Freude kommt auf und die Verunreinigungen des Geistes lösen sich auf. Es ist, wie wenn man verunreinigtes Gold läutert, indem man Mühe aufwendet. ",
   "an3.70:17.1": "Und wie läutert man verunreinigtes Gold, indem man Mühe aufwendet? ",
   "an3.70:17.2": "Mit einem Schmelzofen, Fließmittel, einem Blasebalg und einer Zange und indem man die entsprechende Mühe aufwendet. ",
   "an3.70:17.3": "So läutert man verunreinigtes Gold, indem man Mühe aufwendet. ",
